@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.stofa.dk" version="1.0.2" name="Stofa web-tv" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.stofa.dk" version="1.0.3" name="Stofa web-tv" provider-name="twinther">
     <requires>
-        <import addon="xbmc.python" version="2.0"/>
+        <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.buggalo" version="1.1.2"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
     </requires>
@@ -11,11 +11,14 @@
     <extension point="xbmc.addon.metadata">
         <summary lang="en">Web-tv from Stofa</summary>
         <summary lang="da">Web-tv fra Stofa</summary>
-        <description lang="en">Watch web-tv from Stofa. Login required.[CR][CR]If you have comments or suggestions for this addon, please feel free to participate in the debate on my blog at http://tommy.winther.nu</description>
-        <description lang="da">Se web-tv fra Stofa. Kræver login.[CR][CR]Har du kommentarer, ris eller ros til denne addon er du velkommen til at deltage i debatten på min blog på http://tommy.winther.nu</description>
+        <description lang="en">Watch web-tv from Stofa. Login required.[CR]Many channels are not playable due to missing DRM requirements.[CR][CR]If you have comments or suggestions for this addon, please feel free to participate in the debate on my blog at http://tommy.winther.nu</description>
+        <description lang="da">Se web-tv fra Stofa. Kræver login.[CR]Mange kanaler kan ikke afspilles pga. DRM krav.[CR][CR]Har du kommentarer, ris eller ros til denne addon er du velkommen til at deltage i debatten på min blog på http://tommy.winther.nu</description>
         <disclaimer lang="en">Some parts of this addon may not be legal in your country of residence - please check with your local laws.</disclaimer>
         <disclaimer lang="da">Nogle dele af denne addon er muligvis ikke lovlig i dit land - kontroller venligst dine lokale love.</disclaimer>
         <platform>all</platform>
         <language>da</language>
+        <email>tommy@winther.nu</email>
+        <website>http://tommy.winther.nu</website>
+        <source>https://github.com/xbmc-danish-addons/plugin.video.stofa.dk</source>
     </extension>
 </addon>
