@@ -3,6 +3,7 @@
     <string id="100">Login</string>
     <string id="101">Username</string>
     <string id="102">Password</string>
+    <string id="103">Hide DRM protected channels</string>
 
     <string id="200">Your login is invalid.</string>
     <string id="201">Verify your settings and try again.</string>
