@@ -1,3 +1,7 @@
+[B]Version 1.0.3 - 2013-05-12[/B]
+- Updated addon to match JSON changes on site
+- Added setting to hide DRM protected channels
+
 [B]Version 1.0.2 - 2012-12-25[/B]
 - Updated addon to match changes to website
 
